<resources>
    <string name="app_name">DependencyInjectionApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="login">Login</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="add_expense">add expense</string>
    <string name="decription">Description</string>
    <string name="total">Total:</string>
</resources>