<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userExpense"
            type="com.jp.test.dependencyinjectionapp.models.UserExpenses" />

        <variable
            name="fragment"
            type="com.jp.test.dependencyinjectionapp.fragments.HomeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:background="@color/color_FFFFFFFF">

        <TextView
            android:id="@+id/tvAmountTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAmountValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@{userExpense.amountSpend.toString()}"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tvAmountTitle"
            app:layout_constraintTop_toTopOf="@id/tvAmountTitle"
            tools:text=": 80" />

        <TextView
            android:id="@+id/tvDescriptionTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/decription"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAmountTitle" />

        <TextView
            android:id="@+id/tvDescriptionValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@{userExpense.description}"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tvDescriptionTitle"
            app:layout_constraintTop_toTopOf="@id/tvDescriptionTitle"
            tools:text="Test" />

        <TextView
            android:id="@+id/tvDateTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescriptionTitle" />

        <TextView
            android:id="@+id/tvDateValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tvDateTitle"
            app:layout_constraintTop_toTopOf="@id/tvDateTitle"
            tools:text=": 02-01-2024" />

        <ImageView
            android:id="@+id/imgEdit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_edit"
            android:padding="@dimen/_5sdp"
            android:onClick="@{() -> fragment.onEditExpenseClick(userExpense)}"
            android:layout_marginEnd="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgDelete"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_delete"
            android:padding="@dimen/_5sdp"
            android:onClick="@{() -> fragment.onDeleteExpenseClick(userExpense)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
